// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/activity_and_insights/insights/insights_title should match snapshot with My insights 1`] = `
<MenuWrapper
  animationComponent={[Function]}
  className=""
  id="insightsFilterDropdown"
>
  <button
    className="insights-title"
  >
    My insights
    <span
      className="icon"
    >
      <Icon
        glyph="chevron-down"
        size={16}
      />
    </span>
  </button>
  <Menu
    ariaLabel="Insights Filter Menu"
  >
    <MenuItemAction
      buttonClass="insights-filter-btn"
      icon={
        <Icon
          glyph="account-outline"
          size={16}
        />
      }
      id="insightsDropdownMy"
      onClick={[MockFunction]}
      show={true}
      text="My insights"
    />
    <MenuItemAction
      buttonClass="insights-filter-btn"
      icon={
        <Icon
          glyph="account-multiple-outline"
          size={16}
        />
      }
      id="insightsDropdownTeam"
      onClick={[MockFunction]}
      show={true}
      text="Team insights"
    />
  </Menu>
</MenuWrapper>
`;

exports[`components/activity_and_insights/insights/insights_title should match snapshot with team 1`] = `
<MenuWrapper
  animationComponent={[Function]}
  className=""
  id="insightsFilterDropdown"
>
  <button
    className="insights-title"
  >
    Team insights
    <span
      className="icon"
    >
      <Icon
        glyph="chevron-down"
        size={16}
      />
    </span>
  </button>
  <Menu
    ariaLabel="Insights Filter Menu"
  >
    <MenuItemAction
      buttonClass="insights-filter-btn"
      icon={
        <Icon
          glyph="account-outline"
          size={16}
        />
      }
      id="insightsDropdownMy"
      onClick={[MockFunction]}
      show={true}
      text="My insights"
    />
    <MenuItemAction
      buttonClass="insights-filter-btn"
      icon={
        <Icon
          glyph="account-multiple-outline"
          size={16}
        />
      }
      id="insightsDropdownTeam"
      onClick={[MockFunction]}
      show={true}
      text="Team insights"
    />
  </Menu>
</MenuWrapper>
`;
